--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "floc-off": "^1.0.2",
     "homepage": "https://Samaev.github.io",
     "noflo-react": "^0.4.0",
     "nofloc": "^1.0.1",
